@@ -1,3 +1,8 @@
+2008-10-23  David Gilbert  <david.gilbert@object-refinery.com>
+
+    * source/org/jfree/chart/ChartFactory.java
+    (setChartTheme): Check if theme is "Legacy" and reset default bar painters.
+
 2008-10-15  David Gilbert  <david.gilbert@object-refinery.com>
 
     * source/org/jfree/chart/LegendItem.java
